fix(control-panel): align target value double button in IE11
related to #OPT-1125

--- a/client/src/components/Reports/targetValue/TargetValueComparison.scss
+++ b/client/src/components/Reports/targetValue/TargetValueComparison.scss
@@ -1,3 +1,7 @@
+.TargetValueComparison {
+  display: inline;
+}
+
 .TargetValueComparison__settingsIcon {
   vertical-align: bottom;
 }
